--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-session": "^1.4.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.28",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
