--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.0",
         "mongoose": "^5.10.2",
+        "multer": "^1.4.2",
         "passport": "^0.4.1",
         "passport-google-oauth2": "^0.2.0",
         "passport-local": "^1.0.0",
