--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     },
     "homepage": "https://github.com/TurqayUmudzade/TODO#readme",
     "dependencies": {
-        "@shopify/draggable": "^1.0.0-beta.8",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "connect-flash": "^0.1.1",
@@ -28,13 +27,14 @@
         "express": "^4.17.1",
         "express-validator": "^6.6.1",
         "jsonwebtoken": "^8.5.1",
-        "mongodb": "^3.6.0",
-        "mongoose": "^5.10.2",
+        "mongodb": "^3.6.2",
+        "mongoose": "^5.10.5",
         "multer": "^1.4.2",
         "passport": "^0.4.1",
         "passport-google-oauth2": "^0.2.0",
         "passport-local": "^1.0.0",
-        "tailwindcss": "^1.7.6",
+        "sortablejs": "^1.11.2-alpha.3",
+        "tailwindcss": "^1.8.10",
         "validator": "^13.1.1"
     },
     "devDependencies": {
