--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "passport": "^0.4.1",
         "passport-google-oauth2": "^0.2.0",
         "passport-local": "^1.0.0",
+        "socket.io": "^2.3.0",
         "sortablejs": "^1.11.2-alpha.3",
         "tailwindcss": "^1.8.10",
         "validator": "^13.1.1"
